# marzipan

./: .gitignore  Cargo.toml  LICENSE  README.md
mzp_peg_macro/: Cargo.toml  README.md
peg_macro/: Cargo.toml
peg_macro/src/: lib.rs
src/: encoding.rs  error.rs  lang.rs  main.rs  world.rs
src/labels/: labels.rs  mod.rs  parse.rs  process.rs  sanitize.rs
src/labels/snapshots/: marzipan__labels__process__test__diagnostics.snap  marzipan__labels__process__test__label_sanitization.snap  marzipan__labels__process__test__local_labels.snap  marzipan__labels__process__test__namespaces.snap  zasm__labels__labels__test__label_detection.snap  zasm__labels__parse__test__label_detection.snap  zasm__labels__process__test__anonymous_labels.snap  zasm__labels__process__test__diagnostics.snap  zasm__labels__process__test__local_labels.snap
src/peg/: mod.rs  peg.rs
src/preprocess/: eval.rs  mod.rs  parse.rs  peg.rs  scan.rs
tests/: blank.brd
tests/labels/: anonymous.txt  diagnostics.txt  find-all.txt  local.txt  namespaces.txt  sanitize.txt
