[package]
name = "assembler"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
codepage-437 = "0.1.0"
peg_macro = { path = "./peg_macro"}
insta = "1.39.0"
nom = "7.1.3"
compact_str = "0.9.0"
rustc-hash = "2.1.1"
lexopt = "0.3.1"

[dev-dependencies]
insta = "1.39.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bin]]
name = "zasm"
path = "src/main.rs"

[workspace]
members = [".", "peg_macro"]
