[package]
name = "mzp-peg-macro"
description = "Internal crate for generating Marzipan's PEG parser code"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cmounce/marzipan"

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
